Revert "Test JavaCode2Block"