@@ -20,6 +20,7 @@ import org.cosmic.ide.dependency.resolver.api.Artifact;
 
 import java.util.List;
 import java.util.concurrent.Executors;
+import java.util.stream.Collectors;
 
 import mod.hey.studios.build.BuildSettings;
 import mod.hey.studios.util.Helper;
@@ -120,6 +121,11 @@ public class LibraryDownloaderDialogFragment extends BottomSheetDialogFragment {
                 }
 
                 @Override
+                public void onArtifactFound(@NonNull Artifact dep) {
+                    handler.post(new SetTextRunnable("Found " + dep + " in " + dep.getRepository().getName()));
+                }
+
+                @Override
                 public void onArtifactNotFound(@NonNull Artifact dep) {
                     handler.post(() -> {
                         setDownloadState(false);
@@ -198,7 +204,7 @@ public class LibraryDownloaderDialogFragment extends BottomSheetDialogFragment {
                             var enabledLibs = gson.fromJson(fileContent, Helper.TYPE_MAP_LIST);
                             enabledLibs.addAll(dependencies.stream()
                                     .map(name -> createLibraryMap(name, dependencyName))
-                                    .toList());
+                                    .collect(Collectors.toList()));
                             FileUtil.writeFile(localLibFile, gson.toJson(enabledLibs));
                         }
                         if (getActivity() == null) return;
